fixed gaps of date, changed case of button, changed rss feed button text, added featured image under the play button

--- a/themes/greatermedia/assets/css/greater_media.css
+++ b/themes/greatermedia/assets/css/greater_media.css
@@ -5735,7 +5735,8 @@ category: Components - Shows
 
 .podcast__date {
   font-size: 0.79012em;
-  color: #929497; }
+  color: #929497;
+  text-transform: uppercase; }
 
 a.podcast__rss:link, a.podcast__rss:visited {
   display: inline-block;
@@ -5758,7 +5759,8 @@ a.podcast__rss:link, a.podcast__rss:visited {
   border-radius: 1em;
   display: inline-block;
   margin-left: 10px;
-  font-weight: normal; }
+  font-weight: normal;
+  text-transform: none; }
   a.podcast__rss:link:hover, a.podcast__rss:link:focus, a.podcast__rss:visited:hover, a.podcast__rss:visited:focus {
     background-color: transparent;
     border-color: #7b7d80;
@@ -5778,7 +5780,8 @@ a.podcast__rss:hover, a.podcast__rss:focus {
   font-size: 0.88889em;
   color: #ffffff !important;
   text-transform: uppercase;
-  cursor: pointer; }
+  cursor: pointer;
+  text-transform: none; }
   a.podcast__rss:hover:hover, a.podcast__rss:hover:focus, a.podcast__rss:focus:hover, a.podcast__rss:focus:focus {
     background-color: #aa1c20;
     border-color: #aa1c20;
@@ -5798,7 +5801,8 @@ a.podcast__rss:active {
   font-size: 0.88889em;
   color: #ffffff !important;
   text-transform: uppercase;
-  cursor: pointer; }
+  cursor: pointer;
+  text-transform: none; }
   a.podcast__rss:active:hover, a.podcast__rss:active:focus {
     background-color: black;
     border-color: black;
@@ -5833,7 +5837,8 @@ a.podcast__rss:active {
   -ms-border-radius: 1em;
   -o-border-radius: 1em;
   -border-radius: 1em;
-  border-radius: 1em; }
+  border-radius: 1em;
+  text-transform: none; }
   .podcast__download--btn:hover, .podcast__download--btn:focus {
     background-color: transparent;
     border-color: #7b7d80;
@@ -5853,7 +5858,8 @@ a.podcast__rss:active {
   font-size: 0.88889em;
   color: #ffffff !important;
   text-transform: uppercase;
-  cursor: pointer; }
+  cursor: pointer;
+  text-transform: none; }
   .podcast__download--btn:hover:hover, .podcast__download--btn:hover:focus {
     background-color: #aa1c20;
     border-color: #aa1c20;
@@ -5873,7 +5879,8 @@ a.podcast__rss:active {
   font-size: 0.88889em;
   color: #ffffff !important;
   text-transform: uppercase;
-  cursor: pointer; }
+  cursor: pointer;
+  text-transform: none; }
   .podcast__download--btn:active:hover, .podcast__download--btn:active:focus {
     background-color: black;
     border-color: black;
