--- a/themes/wmgk/assets/css/wmgk.css
+++ b/themes/wmgk/assets/css/wmgk.css
@@ -5729,7 +5729,7 @@ category: Components - Shows
   .podcast__meta:last-child {
     margin-right: 0; }
   .podcast__meta h3 {
-    margin: 15px 0 15px; }
+    margin: 10px 0 15px; }
 
 .podcast__title {
   margin: 20px 0 26px;
@@ -5745,7 +5745,8 @@ category: Components - Shows
 
 .podcast__date {
   font-size: 0.79012em;
-  color: #929497; }
+  color: #929497;
+  text-transform: uppercase; }
 
 a.podcast__rss:link, a.podcast__rss:visited {
   display: inline-block;
@@ -5768,7 +5769,8 @@ a.podcast__rss:link, a.podcast__rss:visited {
   border-radius: 1em;
   display: inline-block;
   margin-left: 10px;
-  font-weight: normal; }
+  font-weight: normal;
+  text-transform: none; }
   a.podcast__rss:link:hover, a.podcast__rss:link:focus, a.podcast__rss:visited:hover, a.podcast__rss:visited:focus {
     background-color: transparent;
     border-color: #7b7d80;
@@ -5788,7 +5790,8 @@ a.podcast__rss:hover, a.podcast__rss:focus {
   font-size: 0.88889em;
   color: #ffffff !important;
   text-transform: uppercase;
-  cursor: pointer; }
+  cursor: pointer;
+  text-transform: none; }
   a.podcast__rss:hover:hover, a.podcast__rss:hover:focus, a.podcast__rss:focus:hover, a.podcast__rss:focus:focus {
     background-color: #aa1c20;
     border-color: #aa1c20;
@@ -5808,7 +5811,8 @@ a.podcast__rss:active {
   font-size: 0.88889em;
   color: #ffffff !important;
   text-transform: uppercase;
-  cursor: pointer; }
+  cursor: pointer;
+  text-transform: none; }
   a.podcast__rss:active:hover, a.podcast__rss:active:focus {
     background-color: black;
     border-color: black;
@@ -5843,7 +5847,8 @@ a.podcast__rss:active {
   -ms-border-radius: 1em;
   -o-border-radius: 1em;
   -border-radius: 1em;
-  border-radius: 1em; }
+  border-radius: 1em;
+  text-transform: none; }
   .podcast__download--btn:hover, .podcast__download--btn:focus {
     background-color: transparent;
     border-color: #7b7d80;
@@ -5863,7 +5868,8 @@ a.podcast__rss:active {
   font-size: 0.88889em;
   color: #ffffff !important;
   text-transform: uppercase;
-  cursor: pointer; }
+  cursor: pointer;
+  text-transform: none; }
   .podcast__download--btn:hover:hover, .podcast__download--btn:hover:focus {
     background-color: #aa1c20;
     border-color: #aa1c20;
@@ -5883,7 +5889,8 @@ a.podcast__rss:active {
   font-size: 0.88889em;
   color: #ffffff !important;
   text-transform: uppercase;
-  cursor: pointer; }
+  cursor: pointer;
+  text-transform: none; }
   .podcast__download--btn:active:hover, .podcast__download--btn:active:focus {
     background-color: black;
     border-color: black;
